updating image assets and fixing spacing -

--- a/server/projects/desktop/css/style.css
+++ b/server/projects/desktop/css/style.css
@@ -284,7 +284,7 @@ textarea{
     margin-top: 20px;
     color:#FFF;
     width:535px;
-    height: 83px;
+    height: 73px;
     background: url(../images/ribbon.png) no-repeat top left;
     text-align:center;
     padding: 23px 0 20px;
@@ -315,7 +315,7 @@ textarea{
     margin-top: 8px;
     color:white;
     width:535px;
-    height: 66px;
+    height: 73px;
     background: url(../images/ribbon-bottom.png) no-repeat top left;
     background-size: 100% 100%;
     text-align:center;
